--- a/index.html
+++ b/index.html
@@ -1,34 +1,36 @@
 <head>
-  <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-  <script src="get_url_vars.js"></script>
-  <script src="//ajax.googleapis.com/ajax/libs/jqueryui/1.10.2/jquery-ui.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="ipo_v2.css">
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="assets/jquery-ui-1.9.2.custom.min.js"></script>
+
+  <script src="assets/magic_script.js"></script>
+  <script src="assets/get_url_vars.js"></script>
+  <link rel="stylesheet" type="text/css" href="assets/ipo_v2.css">
 </head>
 <body>
-  <div class="media-tabs-wrap ipv2">
-   <ul class="media-tabs ipv2">
-     <li class="ipv2_tab1"><a href="#tab-1">Choosing your market</a></li>
-     <li class="ipv2_tab2"><a href="#tab-2">Getting<br/>IPO ready</a></li>
-     <li class="ipv2_tab3"><a href="#tab-3">Executing your IPO</a></li>
-     <li class="ipv2_tab4"><a href="#tab-4">Being public</a></li>
+  <div class="magic-tabs-wrap ipv2">
+   <ul class="magic-tabs ipv2">
+     <li class="ipv2_tab1"><a href="#magic-tab-1">Choosing<br/>your<br/>market</a></li>
+     <li class="ipv2_tab2"><a href="#magic-tab-2">Getting<br/>IPO<br/>ready</a></li>
+     <li class="ipv2_tab3"><a href="#magic-tab-3">Executing<br/>your</br>IPO</a></li>
+     <li class="ipv2_tab4"><a href="#magic-tab-4">Being public</a></li>
    </ul>
-   <div id="ipv_arrow"><img src="images/tab_arrow.png"/></div>
-   <div id="tab-1" class="media-pane">
+   <div id="ipv_arrow"><img src="assets/images/magic-tab_arrow.png"/></div>
+   <div id="magic-tab-1" class="magic-pane">
      <p><strong>Content pane 1</strong></p>
      <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aenean ut orci metus, a pulvinar neque. Ut ut orci risus, at feugiat sapien. Duis aliquet, nisi at scelerisque rhoncus, ipsum libero eleifend est, id posuere neque nibh id augue. Sed ut nisl erat, ac vehicula elit.</p>
    </div>
-   <div id="tab-2" class="media-pane">
+   <div id="magic-tab-2" class="magic-pane">
      <p><strong>Content pane 2</strong></p>
      <p>Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Mauris diam dui, adipiscing sed imperdiet quis, iaculis at velit. Sed turpis felis, blandit eu sollicitudin sit amet, egestas ut est.</p>
    </div>
-   <div id="tab-3" class="media-pane">
+   <div id="magic-tab-3" class="magic-pane">
      <p><strong>Content pane 3</strong></p>
      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eu placerat erat. Sed scelerisque leo ut dui porttitor ac ultrices nibh pharetra.</p>
    </div>
-   <div id="tab-4" class="media-pane">
+   <div id="magic-tab-4" class="magic-pane">
      <p><strong>Content pane 4</strong></p>
      <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Etiam eu placerat erat. Sed scelerisque leo ut dui porttitor ac ultrices nibh pharetra.</p>
    </div>
-  </div>
-  <script src="magic_script.js"></script>
+  </div><!--end magic-tabs-wrap-->
+  
 </body>
