--- a/ultimate-template.html
+++ b/ultimate-template.html
@@ -114,10 +114,11 @@ ul.ipv2  li{
   float:left;
   width: 126px;
   height:123px;
-  padding: 0 13px 0 0;
+  padding: 0 13px 0 0 !important;
+  list-style: none !important;
 }
 ul.ipv2 li a{ 
-color: #fff;
+color: #fff !important;
 text-decoration: none;
 font-size: 19px;
 line-height: 20px;
@@ -139,7 +140,7 @@ ul.ipv2  li.ipv2_tab1{
 
 }
 ul.ipv2  li.ipv2_tab1 a{
-  color:#a32020;
+  color:#a32020 !important;
 }
 ul.ipv2 li.ipv2_tab2{
   background: url('assets/images/tab2.png') no-repeat;
