--- a/ultimate-template.html
+++ b/ultimate-template.html
@@ -100,6 +100,9 @@ h2 {color:#dc6900;}
 .magic-tabs-wrap.ipv2{
   width: 556px;
 }
+.ipv2_tab_wrap{
+  margin: 33px 0 0 20px;
+}
 ul.ipv2 {
   list-style: none;
   background:url('assets/images/dotted_line.png');
@@ -135,25 +138,47 @@ ul.ipv2 li a span{
 #ipv_arrow{
   margin:-10px 0 0 35px;
 }
+ul.ipv2  li.ipv2_tab1 a{
+  color:#fff;
+}
 ul.ipv2  li.ipv2_tab1{
   background: url('assets/images/tab1.png') no-repeat;
 
 }
-ul.ipv2  li.ipv2_tab1 a{
-  color:#a32020 !important;
+li.ipv2_tab1.ipo_v2_active{
+	background: url('assets/images/tab1_active.png') no-repeat !important;
+}
+li.ipv2_tab1.ipo_v2_active a{
+	color: #a32020 !important;
 }
 ul.ipv2 li.ipv2_tab2{
   background: url('assets/images/tab2.png') no-repeat;
 }
+li.ipv2_tab2.ipo_v2_active{
+	background: url('assets/images/tab2_active.png') no-repeat !important;
+}
+li.ipv2_tab2.ipo_v2_active a{
+	color: #948f6b!important;
+}
 ul.ipv2 li.ipv2_tab3{
   background: url('assets/images/tab3.png') no-repeat;
 }
+li.ipv2_tab3.ipo_v2_active{
+	background: url('assets/images/tab3_active.png') no-repeat !important;
+}
+li.ipv2_tab3.ipo_v2_active a{
+	color: #db536b!important;
+}
+
 ul.ipv2 li.ipv2_tab4{
   background: url('assets/images/tab4.png') no-repeat;
   padding: 0px !important;
 }
-.ipv2_tab_wrap{
-  margin: 33px 0 0 20px;
+li.ipv2_tab4.ipo_v2_active{
+	background: url('assets/images/tab4_active.png') no-repeat !important;
+}
+li.ipv2_tab4.ipo_v2_active a{
+	color: #e1301e!important;
 }
 
 </style>
